<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gap_s">

    <LinearLayout
        android:id="@+id/settings_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_panel"
        android:orientation="vertical"
        android:padding="@dimen/sheet_pad">

        <com.FqJvXmR.nKpTzL.core.ui.SectionHeaderView
            android:id="@+id/settings_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerSubtitle="@string/settings_subtitle"
            app:headerTitle="@string/settings_title" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settings_sound"
            style="@style/Widget.App.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_l"
            android:text="@string/settings_sound" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settings_haptics"
            style="@style/Widget.App.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_s"
            android:text="@string/settings_haptics" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settings_contrast"
            style="@style/Widget.App.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_s"
            android:text="@string/settings_contrast" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_reset"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_marginTop="@dimen/gap_l"
            android:text="@string/settings_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_close"
            style="@style/Widget.App.Button.Ghost"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_ghost_height"
            android:layout_marginTop="@dimen/gap_s"
            android:text="@string/settings_close" />

    </LinearLayout>

</RelativeLayout>
