<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gap_s">

    <LinearLayout
        android:id="@+id/tutorial_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_panel"
        android:orientation="vertical"
        android:padding="@dimen/sheet_pad">

        <com.FqJvXmR.nKpTzL.core.ui.SectionHeaderView
            android:id="@+id/tutorial_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerSubtitle="@string/tutorial_subtitle"
            app:headerTitle="@string/tutorial_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_l"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tutorial_image_one"
                android:layout_width="@dimen/tutorial_sprite"
                android:layout_height="@dimen/tutorial_sprite"
                android:contentDescription="@string/cd_prism"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_prism_node" />

            <TextView
                android:id="@+id/tutorial_text_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_m"
                android:layout_weight="1"
                android:text="@string/tutorial_step_one"
                android:textAppearance="@style/TextAppearance.App.Body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_m"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tutorial_image_two"
                android:layout_width="@dimen/tutorial_sprite"
                android:layout_height="@dimen/tutorial_sprite"
                android:contentDescription="@string/cd_emitter"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_emitter_core" />

            <TextView
                android:id="@+id/tutorial_text_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_m"
                android:layout_weight="1"
                android:text="@string/tutorial_step_two"
                android:textAppearance="@style/TextAppearance.App.Body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_m"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tutorial_image_three"
                android:layout_width="@dimen/tutorial_sprite"
                android:layout_height="@dimen/tutorial_sprite"
                android:contentDescription="@string/cd_receiver"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_receiver_ring" />

            <TextView
                android:id="@+id/tutorial_text_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_m"
                android:layout_weight="1"
                android:text="@string/tutorial_step_three"
                android:textAppearance="@style/TextAppearance.App.Body" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tutorial_done"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_marginTop="@dimen/gap_l"
            android:text="@string/tutorial_done"
            app:icon="@drawable/ic_check" />

    </LinearLayout>

</RelativeLayout>
