<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gap_s">

    <LinearLayout
        android:id="@+id/confirm_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_panel"
        android:orientation="vertical"
        android:padding="@dimen/sheet_pad">

        <TextView
            android:id="@+id/confirm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_title"
            android:textAppearance="@style/TextAppearance.App.Title"
            android:textColor="@color/red_pulse" />

        <TextView
            android:id="@+id/confirm_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_s"
            android:text="@string/confirm_message"
            android:textAppearance="@style/TextAppearance.App.Body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_l"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_no"
                style="@style/Widget.App.Button.Ghost"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_ghost_height"
                android:layout_marginEnd="@dimen/gap_s"
                android:layout_weight="1"
                android:text="@string/confirm_no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_yes"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_ghost_height"
                android:layout_weight="1"
                android:text="@string/confirm_yes" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
