<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/result_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base">

    <ImageView
        android:id="@+id/result_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/result_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_win"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/result_card"
        style="@style/Widget.App.Card.Result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_pad"
        android:layout_marginEnd="@dimen/screen_pad"
        android:layout_marginTop="@dimen/gap_l"
        app:layout_constraintBottom_toTopOf="@id/result_next_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/sheet_pad">

            <ImageView
                android:id="@+id/result_emblem"
                android:layout_width="@dimen/emblem_result"
                android:layout_height="@dimen/emblem_result"
                android:contentDescription="@string/cd_emblem"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_seven_emblem" />

            <ImageView
                android:id="@+id/result_burst"
                android:layout_width="@dimen/emblem_result"
                android:layout_height="@dimen/emblem_result"
                android:contentDescription="@string/cd_burst"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_overload_burst"
                android:visibility="gone" />

            <TextView
                android:id="@+id/result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_l"
                android:gravity="center"
                android:text="@string/result_win"
                android:textAppearance="@style/TextAppearance.App.Headline"
                android:textColor="@color/gold_core"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/result_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_s"
                android:gravity="center"
                android:text="@string/result_win_sub"
                android:textAppearance="@style/TextAppearance.App.Label" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/result_best_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_m"
                android:visibility="gone"
                app:cardBackgroundColor="#1AF2C54C"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/gold_core"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/result_best_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/gap_m"
                    android:paddingTop="@dimen/gap_xs"
                    android:paddingEnd="@dimen/gap_m"
                    android:paddingBottom="@dimen/gap_xs"
                    android:text="@string/result_new_best"
                    android:textAppearance="@style/TextAppearance.App.Label"
                    android:textColor="@color/gold_core" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/result_stats_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_l"
                android:orientation="horizontal">

                <com.FqJvXmR.nKpTzL.core.ui.StatCardView
                    android:id="@+id/result_stat_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/gap_s"
                    android:layout_weight="1"
                    app:statAccent="@color/gold_core"
                    app:statLabel="@string/stat_score" />

                <com.FqJvXmR.nKpTzL.core.ui.StatCardView
                    android:id="@+id/result_stat_moves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/gap_s"
                    android:layout_weight="1"
                    app:statAccent="@color/beam_cream"
                    app:statLabel="@string/stat_moves_left" />

                <com.FqJvXmR.nKpTzL.core.ui.StatCardView
                    android:id="@+id/result_stat_checks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:statAccent="@color/red_pulse"
                    app:statLabel="@string/stat_checks" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/result_next_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_l"
        android:layout_marginBottom="@dimen/gap_s"
        android:text="@string/game_level_default"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toTopOf="@id/result_replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_replay"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_secondary_height"
        android:layout_marginStart="@dimen/screen_pad"
        android:layout_marginEnd="@dimen/screen_pad"
        android:text="@string/result_replay"
        app:icon="@drawable/ic_play_beam"
        app:layout_constraintBottom_toTopOf="@id/result_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_next_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_map"
        style="@style/Widget.App.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_secondary_height"
        android:layout_marginStart="@dimen/screen_pad"
        android:layout_marginTop="@dimen/gap_m"
        android:layout_marginEnd="@dimen/screen_pad"
        android:text="@string/result_map"
        app:layout_constraintBottom_toTopOf="@id/result_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_replay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_menu"
        style="@style/Widget.App.Button.Ghost"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_ghost_height"
        android:layout_marginStart="@dimen/screen_pad"
        android:layout_marginTop="@dimen/gap_m"
        android:layout_marginEnd="@dimen/screen_pad"
        android:text="@string/result_menu"
        app:layout_constraintBottom_toTopOf="@id/result_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_map" />

    <TextView
        android:id="@+id/result_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_l"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/text_muted"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/result_flash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/red_pulse"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
